Feat/studentGroupService todos (#127)
* Added specification for filter parameters using specification builder

* Added test for Student group service

* small refactoring studentGroupService

* StudentGroupService tests with mocks

* added tags filter to the studentGroupService and studentGroupController get method

* checkstyle

* fixed issues resulting from changes on main

* checkstyle fixes

* Added student group e2e test

* fixed student group test

* Checkstyle

---------

Co-authored-by: Marco <marcodemartino23@gmail.com>