@@ -12,13 +12,12 @@ import de.uftos.entities.Grade;
 import de.uftos.entities.Lesson;
 import de.uftos.entities.Room;
 import de.uftos.entities.Server;
-import de.uftos.entities.Student;
 import de.uftos.entities.StudentGroup;
 import de.uftos.entities.Subject;
 import de.uftos.entities.Teacher;
 import de.uftos.entities.TimetableMetadata;
 import de.uftos.repositories.database.ServerRepository;
-import de.uftos.repositories.database.TeacherRepository;
+import de.uftos.repositories.database.StudentGroupRepository;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -31,24 +30,24 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 
+
 @SuppressWarnings("checkstyle:MissingJavadocType")
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
-public class TeacherServiceTests {
-
+public class StudentGroupServiceTests {
   @Mock
-  private TeacherRepository teacherRepository;
+  private StudentGroupRepository studentGroupRepository;
 
   @Mock
   private ServerRepository serverRepository;
 
   @InjectMocks
-  private TeacherService teacherService;
+  private StudentGroupService studentGroupService;
 
   private Room room1;
   private Room room2;
 
-  private static void assertResultArraysSizes(LessonResponseDto result, int teachers, int lessons,
+  private static void assertResultArraySizes(LessonResponseDto result, int teachers, int lessons,
                                              int rooms, int grades) {
     assertAll("Testing whether the sizes of the arrays are correct",
         () -> assertEquals(teachers, result.teachers().size()),
@@ -60,66 +59,56 @@ public class TeacherServiceTests {
 
   @BeforeEach
   void setUp() {
-    Teacher teacher1 = new Teacher("Max", "Mustermann", "MM",
-        List.of("1", "2", "3"), List.of("1", "2", "3"));
-    teacher1.setId("123");
+    StudentGroup studentGroup1 =
+        new StudentGroup("Ethik", List.of("S1", "S2"), List.of(), List.of());
+    studentGroup1.setId("123");
 
-    Teacher teacher2 = new Teacher("Alex", "Mustermann", "MA",
-        List.of("1", "2", "3"), List.of("1", "2", "3"));
-    teacher2.setId("456");
-    teacher2.setLessons(Collections.emptyList());
+    StudentGroup studentGroup2 =
+        new StudentGroup("Religion", List.of("S2", "S3"), List.of(), List.of("T1", "T2"));
+    studentGroup2.setId("456");
+    studentGroup2.setLessons(Collections.emptyList());
 
-    Student student1 = new Student("123");
-    Student student2 = new Student("345");
-    Student student3 = new Student("153");
-    Student student4 = new Student("325");
-
-    StudentGroup studentGroup1 = new StudentGroup("654");
-    studentGroup1.setStudents(List.of(student1, student2));
-
-    StudentGroup studentGroup2 = new StudentGroup("674");
-    studentGroup2.setStudents(List.of(student3, student4));
 
     Grade grade1 = new Grade("723");
     grade1.setStudentGroups(List.of(studentGroup1, studentGroup2));
-
     studentGroup1.setGrades(List.of(grade1));
     studentGroup2.setGrades(List.of(grade1));
 
-    Subject subject = new Subject();
-    subject.setId("789");
+    Subject subject = new Subject("789");
 
     room1 = new Room("534");
     room2 = new Room("574");
 
+    Teacher teacher1 = new Teacher("T1");
+    Teacher teacher2 = new Teacher("T2");
+
     Lesson lesson1 = createLesson(teacher1, room1, studentGroup1, "2024", subject);
-    Lesson lesson2 = createLesson(teacher1, room1, studentGroup1, "2022", subject);
+    Lesson lesson2 = createLesson(teacher2, room1, studentGroup1, "2022", subject);
     Lesson lesson3 = createLesson(teacher1, room2, studentGroup2, "2024", subject);
 
-    teacher1.setLessons(List.of(lesson1, lesson2, lesson3));
-    teacher1.setSubjects(List.of(subject));
+    studentGroup1.setLessons(List.of(lesson1, lesson2, lesson3));
 
-    Server server =
-        new Server(new TimetableMetadata(45, "7:45", new Break[] {}), "2024");
+    Break[] breaks = {};
+    Server server = new Server(new TimetableMetadata(45, "8:00", breaks), "2024");
     when(serverRepository.findAll()).thenReturn(List.of(server));
-    when(teacherRepository.findById("123")).thenReturn(Optional.of(teacher1));
-    when(teacherRepository.findById("456")).thenReturn(Optional.of(teacher2));
+    when(studentGroupRepository.findById("123")).thenReturn(Optional.of(studentGroup1));
+    when(studentGroupRepository.findById("456")).thenReturn(Optional.of(studentGroup2));
   }
 
   @Test
   void emptyLessons() {
-    assertDoesNotThrow(() -> teacherService.getLessonsById("456"));
-    LessonResponseDto result = teacherService.getLessonsById("456");
-    assertResultArraysSizes(result, 0, 0, 0, 0);
+    assertDoesNotThrow(() -> studentGroupService.getLessonsById("456"));
+    LessonResponseDto result = studentGroupService.getLessonsById("456");
+    assertResultArraySizes(result, 0, 0, 0, 0);
   }
 
   @Test
   void lessonsById() {
-    LessonResponseDto result = teacherService.getLessonsById("123");
-    assertResultArraysSizes(result, 1, 2, 2, 1);
+    LessonResponseDto result = studentGroupService.getLessonsById("123");
+    assertResultArraySizes(result, 1, 2, 2, 1);
     assertAll("Testing whether the sizes of the arrays are correct",
         () -> assertEquals(2, result.grades().getFirst().studentGroupIds().size()),
-        () -> assertEquals(4, result.grades().getFirst().studentIds().size())
+        () -> assertEquals(3, result.grades().getFirst().studentIds().size())
     );
 
     assertAll("Testing whether all the rooms are there",
@@ -128,13 +117,14 @@ public class TeacherServiceTests {
     );
 
     assertAll("Testing whether all the student groups are there",
-        () -> assertTrue(result.grades().getFirst().studentGroupIds().contains("674")),
-        () -> assertTrue(result.grades().getFirst().studentGroupIds().contains("654"))
+        () -> assertTrue(result.grades().getFirst().studentGroupIds().contains("123")),
+        () -> assertTrue(result.grades().getFirst().studentGroupIds().contains("456"))
     );
 
     assertAll("Testing whether all the students are there",
-        () -> assertTrue(result.grades().getFirst().studentIds().contains("123")),
-        () -> assertTrue(result.grades().getFirst().studentIds().contains("345"))
+        () -> assertTrue(result.grades().getFirst().studentIds().contains("S1")),
+        () -> assertTrue(result.grades().getFirst().studentIds().contains("S2")),
+        () -> assertTrue(result.grades().getFirst().studentIds().contains("S3"))
     );
   }
 
@@ -149,4 +139,6 @@ public class TeacherServiceTests {
     lesson.setSubject(subject);
     return lesson;
   }
+
+
 }
